RESOLVED FIXED198809
Clicking the up/down spin buttons for a number input increments/decrements by 2
https://bugs.webkit.org/show_bug.cgi?id=198809
Summary Clicking the up/down spin buttons for a number input increments/decrements by 2
Devin Rousso
Reported 2019-06-12 15:01:05 PDT
# STEPS TO REPRODUCE: 1. data:text/html,<html><body><input%20type="number" value="0"></body></html> 2. click the up/down spin button => value changes to 2/-2 NOTE: this does NOT happen if you use the up/down arrow keys.
Attachments
Patch (3.70 KB, patch)
2019-06-25 16:24 PDT, Timothy Hatcher
no flags
Wenson Hsieh
Comment 1 2019-06-12 15:05:21 PDT
Tim Horton
Comment 2 2019-06-25 16:19:32 PDT
*** Bug 199210 has been marked as a duplicate of this bug. ***
Timothy Hatcher
Comment 3 2019-06-25 16:24:01 PDT
WebKit Commit Bot
Comment 4 2019-06-25 16:42:09 PDT
Comment on attachment 372873 [details] Patch Clearing flags on attachment: 372873 Committed r246818: <https://trac.webkit.org/changeset/246818>
WebKit Commit Bot
Comment 5 2019-06-25 16:42:11 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 6 2019-07-03 15:43:20 PDT
Should we still respect the settings to match AppKit scroller behavior? The settings haven’t been removed, it’s just that the defaulting mechanism used has changed.
Darin Adler
Comment 7 2019-07-03 15:43:43 PDT
I suppose spin buttons are not scrollers, so it’s strange to respect the setting here.
Note You need to log in before you can comment on or make changes to this bug.